# openstadia-hub

./: Caddyfile  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run.ps1  run.sh
alembic/: env.py
alembic/versions/: 0828b34df47b_database_creation.py  8c36280c355c_add_server_invites.py  b10b1ee3e7a7_add_owner_role.py
dev/: .gitignore  Caddyfile  compose.yml
openstadia_hub/: client.py  client_manager.py  config.py  connection_manager.py  data.py  main.py  packet.py
openstadia_hub/api/: apps.py  offer.py  server_accesses.py  server_invites.py  servers.py  servers_apps.py  servers_ws.py  users.py
openstadia_hub/auth/: authorization_header_elements.py  dependencies.py  json_web_token.py
openstadia_hub/core/: auth.py  base.py  config.py  database.py  json_web_token.py  server_token.py
openstadia_hub/crud/: __init__.py  apps.py  server.py  server_access.py  server_invites.py  user.py
openstadia_hub/models/: __init__.py  app.py  server.py  server_access.py  server_invite.py  user.py
openstadia_hub/schemas/: __init__.py  app.py  offer.py  packet.py  server.py  server_access.py  server_invite.py  session_description.py  user.py  user_server_role.py
openstadia_hub/server/: router.py
openstadia_hub/services/: apps.py  connection.py  offer.py  server_invite.py  server_permission.py
prod/: .gitignore  Caddyfile  compose.yml
scripts/: alembic-commit.ps1  docker-build.ps1  docker-push.ps1  run-dev.ps1
static/: index.html
