[tool.poetry]
name = "openstadia-hub"
version = "0.1.0"
description = ""
authors = ["Daniil Utkin <daniil@utkin.tech>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "openstadia_hub" }]

[tool.poetry.dependencies]
python = "^3.9"
pyjwt = { extras = ["crypto"], version = "^2.7.0" }
requests = "^2.31.0"
sqlalchemy = "^2.0.16"
fastapi = "^0.100.1"
uvicorn = { extras = ["standard"], version = "^0.23.1" }
pydantic-settings = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
